# SDL2-CMake

./: CMakeLists.txt  README.md  appDefines.h.in  game_Settings
App/: CMakeLists.txt  main.cpp  myGame.cpp  myGame.h
Core/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Core.cpp  Core.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameEntity.cpp  GameEntity.h  GameSettings.cpp  GameSettings.h  GameState.h  GraphicManager.cpp  GraphicManager.h  InputManager.cpp  InputManager.h  Math3D.h  Timer.cpp  Timer.h  Vector2D.cpp  Vector2D.h
Modules/: IncludeSDL.cmake
